<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity">

    <include
        layout="@layout/toolbar_configuration"
        tools:layout_editor_absoluteX="-124dp"
        tools:layout_editor_absoluteY="-121dp" />

    <TextView
        android:id="@+id/tv_configGreatScore"
        android:layout_width="162dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/config_great_score"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_configName" />

    <TextView
        android:id="@+id/tv_configPoorScore"
        android:layout_width="162dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/config_poor_score"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_configGreatScore" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_configPoorScore" />

    <Button
        android:id="@+id/btn_goToGameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/go_to_games_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_goToAchievements" />

    <Button
        android:id="@+id/btn_goToAchievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/go_to_achievements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_configPoorScore" />

    <EditText
        android:id="@+id/et_configName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/tv_configName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_configGreatScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/tv_configGreatScore"
        app:layout_constraintTop_toBottomOf="@+id/et_configName" />

    <EditText
        android:id="@+id/et_configPoorScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/tv_configPoorScore"
        app:layout_constraintTop_toBottomOf="@+id/et_configGreatScore" />

    <TextView
        android:id="@+id/tv_configName"
        android:layout_width="117dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="112dp"
        android:text="@string/config_name"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>